--- a/js1/index.html
+++ b/js1/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Inflation calculator</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	
+	<div class="background-overlay">
+
+		<h1>Inflation calculator</h1>
+
+		<div class="container">
+			<h3>Inflation rate: <input type="number" min="0.1" id="inflationRate"> %</h3> <br>
+			<h3>How much will <input type="number" min="1" id="money"> € be worth in  
+				<input type="number" min="1" id="years"> years?</h3>
+
+			<button onclick="inflationCalculator()">Calculate</button>
+		</div>
+
+	</div>
+
+	<script src="script.js"></script>
 </body>
 </html>
