--- a/js1/index.html
+++ b/js1/index.html
@@ -14,7 +14,7 @@
 			<h3>How much will <input type="number" min="1" id="money"> € be worth in  
 				<input type="number" min="1" id="years"> years?</h3>
 
-			<button onclick="inflationCalculator()">Calculate</button>
+			<button onclick="calculator()">Calculate</button>
 		</div>
 
 	</div>
